# annotateEZ

./: .gitignore  pyproject.toml  requirements.txt
annotateEZ/: annotateEZ.py  config.yml  eval.py
