[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "annotateEZ"
version = "0.1.0"
description = "A PyQt5-based image annotation tool for HDF5 datasets"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["annotation", "image", "hdf5", "pyqt5"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "PyQt5>=5.15.0",
    "pandas>=1.0.0",
    "numpy>=1.18.0",
    "h5py>=3.0.0",
    "PyYAML>=5.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/annotateEZ"
Repository = "https://github.com/yourusername/annotateEZ.git"
Documentation = "https://github.com/yourusername/annotateEZ/blob/main/README.md"

[tool.hatch.build.targets.wheel]
packages = ["annotateEZ"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88
target-version = ["py37"]
include = '\.pyi?$'

[tool.flake8]
max-line-length = 88
extend-ignore = "E203" 