[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "annotateEZ"
version = "0.1.0"
description = "A PyQt5-based image annotation tool for HDF5 datasets"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Rajiv Mandya Nagaraju", email = "" }
]
keywords = ["annotation", "image", "hdf5", "pyqt5"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "absl-py>=2.0.0",
    "accelerate>=0.24.1",
    "aiohttp>=3.9.1",
    "aiosignal>=1.3.1",
    "annotated-types>=0.6.0",
    "anyio>=3.7.1",
    "async-timeout>=4.0.3",
    "attrs>=23.1.0",
    "certifi>=2023.11.17",
    "charset-normalizer>=3.3.2",
    "click>=8.1.7",
    "cmake>=3.27.7",
    "colorama>=0.4.6",
    "contourpy>=1.2.0",
    "cycler>=0.12.1",
    "datasets>=2.15.0",
    "dill>=0.3.7",
    "exceptiongroup>=1.2.0",
    "fastapi>=0.104.1",
    "filelock>=3.13.1",
    "fonttools>=4.45.1",
    "frozenlist>=1.4.0",
    "fsspec>=2023.10.0",
    "h5py>=3.10.0",
    "huggingface-hub>=0.19.4",
    "idna>=3.6",
    "importlib-resources>=6.1.1",
    "Jinja2>=3.1.2",
    "joblib>=1.3.2",
    "kiwisolver>=1.4.5",
    "lit>=17.0.6",
    "MarkupSafe>=2.1.3",
    "matplotlib>=3.8.2",
    "mpmath>=1.3.0",
    "multidict>=6.0.4",
    "multiprocess>=0.70.15",
    "networkx>=3.2.1",
    "numpy>=1.26.2",
    "nvidia-cublas-cu11>=11.10.3.66",
    "nvidia-cuda-cupti-cu11>=11.7.101",
    "nvidia-cuda-nvrtc-cu11>=11.7.99",
    "nvidia-cuda-runtime-cu11>=11.7.99",
    "nvidia-cudnn-cu11>=8.5.0.96",
    "nvidia-cufft-cu11>=10.9.0.58",
    "nvidia-curand-cu11>=10.2.10.91",
    "nvidia-cusolver-cu11>=11.4.0.1",
    "nvidia-cusparse-cu11>=11.7.4.91",
    "nvidia-nccl-cu11>=2.14.3",
    "nvidia-nvtx-cu11>=11.7.91",
    "packaging>=23.2",
    "pandas>=2.1.3",
    "Pillow>=10.1.0",
    "psutil>=5.9.6",
    "pydantic>=2.5.2",
    "pydantic_core>=2.14.5",
    "pyparsing>=3.1.1",
    "PyQt5>=5.15.10",
    "PyQt5-Qt5>=5.15.2",
    "PyQt5-sip>=12.13.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3.post1",
    "PyYAML>=6.0.1",
    "regex>=2023.10.3",
    "requests>=2.31.0",
    "safetensors>=0.4.1",
    "scikit-learn>=1.3.2",
    "scipy>=1.11.4",
    "six>=1.16.0",
    "sniffio>=1.3.0",
    "starlette>=0.27.0",
    "sympy>=1.12",
    "threadpoolctl>=3.2.0",
    "torch>=2.0.1",
    "torchaudio>=2.0.2",
    "torchvision>=0.15.2",
    "tqdm>=4.66.1",
    "triton>=2.0.0",
    "typing_extensions>=4.8.0",
    "tzdata>=2023.3",
    "urllib3>=2.1.0",
    "xxhash>=3.4.1",
    "yarl>=1.9.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
]

[project.urls]
Homepage = "https://github.com/pugilist-dev/annotateEZ"
Repository = "https://github.com/pugilist-dev/annotateEZ.git"
Documentation = "https://github.com/pugilist-dev/annotateEZ/blob/main/README.md"

[tool.hatch.build.targets.wheel]
packages = ["annotateEZ"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.flake8]
max-line-length = 88
extend-ignore = "E203" 